Pulse 2 sections responsive markup

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                 <a href="#" class="header__logo">
                     <img src="img/run_smart.png" alt="RunSmart">
                 </a>
-                <div class="header__official">
+                <div class="header__official s-hidden">
                     Официальный представитель
                     <span>Garmin, Polar, Suunto</span>
                 </div>
@@ -54,7 +54,7 @@
         <div class="container">
             <h2 class="title-black">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
-                <div class="advantages__block">
+                <div class="advantages__block advantages__first">
                     <img src="../img/goblet_icon.png" alt="Делиться опытом">
                     <div class="advantages__text_block">
                         <h3 class="advantages__subtitle">Делиться опытом</h3>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="advantages__block">
+                <div class="advantages__block advantages__second">
                     <img src="../img/heart_icon.png" alt="Заботимся о здоровье">
                     <div class="advantages__text_block">
                         <h3 class="advantages__subtitle">Заботимся о здоровье</h3>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="advantages__block">
+                <div class="advantages__block advantages__third">
                     <img src="../img/shoe_icon.png" alt="Учим бегать">
                     <div class="advantages__text_block">
                         <h3 class="advantages__subtitle">Учим бегать</h3>
