--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button">заказать звонок</button>
+                    <button data-modal="consultation" class="button">заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -42,7 +42,7 @@
                         на все вопросы
                     </div>
                 </div>
-                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -99,7 +99,7 @@
                 <input name="name" required placeholder="Ваше имя" type="text">
                 <input name="phone" required placeholder="Ваш телефон" type="number">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
-                <button class="button button_submit" >заказать кОНСУЛЬТАЦИЮ</button>
+                <button data-modal="consultation" class="button button_submit" >заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
     </section>
@@ -136,7 +136,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/suunto-m2.png" alt="pulsometer" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1
+                            <div class="catalog-item__subtitle">Пульсометр Suunto M2
                             </div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
@@ -190,7 +190,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/suunto-m2.png" alt="pulsometer" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT2
                             </div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
@@ -217,7 +217,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/suunto-m2.png" alt="pulsometer" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT3
                             </div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
@@ -244,7 +244,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/suunto-m2.png" alt="pulsometer" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT6
                             </div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
@@ -271,7 +271,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/suunto-m2.png" alt="pulsometer" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT9
                             </div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">подробнее</a>
@@ -429,7 +429,52 @@
         </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4303074593977!2d37.64480731610174!3d55.76839799825633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2sMyasnitskiy%20Proyezd%2C%204%2F3%2C%20Moskva%2C%20Russia%2C%20107078!5e0!3m2!1sen!2sus!4v1595418278875!5m2!1sen!2sus" width="100%" height="630" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div class="footer__info">
+            <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+            <a class="footer__phone" href="tel:+74999228974">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="img/facebook_icon.png" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="img/instagram_icon.png" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="img/pinterest_icon.png" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
     
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__text">и мы перезвоним вам в течение 10 минут</div>
+            <form class="feed-form feed-form_modal" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+
+        <div class="modal" id="order">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Ваш заказ:</div>
+            <div class="modal__text">Пульсометр Polar FT1</div>
+            <form class="feed-form feed-form_modal" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">Купить</button>
+            </form>
+        </div>
+
+        <div class="modal modal_thanks" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+            <div class="modal__text">Наш менеджер свяжется с вами 
+                в ближайшее время!</div>
+        </div>
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
