--- a/src/index.html
+++ b/src/index.html
@@ -95,9 +95,9 @@
             <h2 class="title-black title-black_white">Получите бесплатную консультацию <br> по подбору пульсометра</h2>
             <div class="consultation__descr">Просто заполните форму заявки <br> 
                 и мы перезвоним вам в течение 10 минут</div>
-            <form class="feed-form" action="#">
-                <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+            <form id="consultation-form" class="feed-form" action="#">
+                <input name="name" required maxlength="10" placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
                 <button class="button button_submit" >заказать кОНСУЛЬТАЦИЮ</button>
             </form>
@@ -449,9 +449,9 @@
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__text">и мы перезвоним вам в течение 10 минут</div>
             <form class="feed-form feed-form_modal" action="#">
-                <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
-                <input name="email" required placeholder="Ваш E-mail" type="email">
+                <input name="name"  placeholder="Ваше имя" type="text">
+                <input name="phone"  placeholder="Ваш телефон">
+                <input name="email" placeholder="Ваш E-mail" type="email">
                 <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
@@ -462,7 +462,7 @@
             <div class="modal__text">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_modal" action="#">
                 <input name="name" required placeholder="Ваше имя" type="text">
-                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш E-mail" type="email">
                 <button class="button button_submit">Купить</button>
             </form>
@@ -479,7 +479,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js">
     </script>
 
