--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/font.css">
-    <!-- <link rel="stylesheet" type="text/css" href="css/slick.css"/> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
-    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Pulse</title>
 </head>
@@ -379,7 +374,7 @@
                             <a href="#" class="catalog-item__link">подробнее</a>
                         </div>
                         <div class="catalog-item__list">
-                            <ul class="catalog-item__more">
+                            <ul class="catalog-item__moregit">
                                 <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                                 <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                                 <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
